[tool.poetry]
name = "fin-models"
version = "0.1.0"
description = "Financial Database Models"
repository = "https://github.com/briancappello/fin-models"
authors = ["Brian Cappello <briancappello@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fin_models"}]

[tool.poetry.scripts]
fin = 'fin_models.cli:main'

[tool.poetry.dependencies]
python = "^3.10,<3.13"
aiohttp = { version = "*", extras = ["speedups"] }
beautifulsoup4 = "^4.12.2"
click = "^8.1.3"
lxml = "^4.9.2"
pandas = "^2.0.2"
requests = "^2.31.0"
sqlalchemy = "<2"
sqlalchemy-unchained = "^0.12.2"
joblib = "^1.3.0"
ta-lib = "^0.4.26"
scipy = "^1.11.1"
matplotlib = "^3.7.1"
alembic = "^1.11.1"
psycopg2 = "^2.9.6"
pandas-market-calendars = "^4.1.4"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.4.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
target-version = ['py310']
preview = true

[tool.isort]
profile = "black"
line_length = 90
lines_between_types = 1
lines_after_imports = 2
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
filterwarnings = [
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:pkg_resources is deprecated:DeprecationWarning',
    'ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning',
]
