[tool.poetry]
name = "fin-models"
version = "0.1.0"
description = "Financial Database Models"
repository = "https://github.com/briancappello/fin-models"
authors = ["Brian Cappello <briancappello@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fin_models"}]

[tool.poetry.scripts]
fin = "fin_models.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = { version = "*", extras = ["speedups"] }
beautifulsoup4 = "^4"
click = "^8"
lxml = ">=4.9.2"
pandas = "^2"
requests = "^2"
sqlalchemy = "<2"
sqlalchemy-unchained = "^0.14.0"
joblib = "^1.3.0"
ta-lib = { git = "git@github.com:TA-Lib/ta-lib-python.git" }
scipy = "^1.10.0"
matplotlib = "^3.7.1"
alembic = "^1.11.1"
psycopg2 = "^2.9.6"
pandas-market-calendars = "^4.1.4"
marshmallow = "^3.20.2"
pydantic = "^2.6.1"

[tool.poetry.group.dev.dependencies]
black = ">=24.1"
isort = ">=5.12.0"
mypy = ">=1.8.0"
pytest = ">=7.4.0"
pandas-stubs = "^2.1.4.231227"
types-beautifulsoup4 = "^4.12.0.20240106"
types-python-dateutil = "^2.8.19.20240106"
types-requests = "^2.31.0.20240125"
sqlalchemy2-stubs = "^0.0.2a38"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
target-version = ['py310']
preview = true

[tool.isort]
profile = "black"
include_trailing_comma = true
lines_between_types = 1
lines_after_imports = 2
multi_line_output = 3
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
known_first_party = [
    "sqlalchemy_unchained",
]

[[tool.mypy.overrides]]
module = [
    "joblib",
    "pandas_market_calendars",
    "scipy.*",
    "talib",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-s"
filterwarnings = [
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:pkg_resources is deprecated:DeprecationWarning',
    'ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning',
    'ignore:\nPyarrow will become a required dependency of pandas:DeprecationWarning',
]
