[tool.poetry]
name = "fin-models"
version = "0.1.0"
description = "Financial Database Models"
repository = "https://github.com/briancappello/fin-models"
authors = ["Brian Cappello <briancappello@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fin_models"}]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.scripts]
fin = "fin_models.cli:main"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = { version = "==3.9.5", extras = ["speedups"] }
beautifulsoup4 = "^4"
click = "^8"
lxml = ">=4.9.2"
numpy = "<2"
pandas = "^2"
requests = "^2"
sqlalchemy = "<2"
sqlalchemy-unchained = "^0.14.0"
joblib = "^1.3.0"
ta-lib = "^0.4.29"
scipy = "^1.10.0"
matplotlib = "^3.7.1"
alembic = "^1.11.1"
psycopg2 = "^2.9.6"
pandas-market-calendars = "^4.1.4"
marshmallow = "^3.20.2"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.8.0"
pytest = ">=7.4.0"
pandas-stubs = "^2.1.4.231227"
types-beautifulsoup4 = "^4.12.0.20240106"
types-python-dateutil = "^2.8.19.20240106"
types-requests = "^2.31.0.20240125"
sqlalchemy2-stubs = "^0.0.2a38"
ruff = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 90
target-version = "py310"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint.isort]
case-sensitive = true
lines-after-imports = 2
lines-between-types = 1
required-imports = ["from __future__ import annotations"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = ["sqlalchemy_unchained"]

[[tool.mypy.overrides]]
module = [
    "joblib",
    "pandas_market_calendars",
    "scipy.*",
    "talib",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-s"
filterwarnings = [
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:pkg_resources is deprecated:DeprecationWarning',
    'ignore:Deprecated call to `pkg_resources.declare_namespace:DeprecationWarning',
    'ignore:\nPyarrow will become a required dependency of pandas:DeprecationWarning',
]
